# bifrost-relayer-status

./: .env  .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  env-example.env  pyproject.toml  relayer_alert.py  relayer_alert_org.py  unbonding.py
logs/: 2023-07-03 11:53:05  2023-07-03 11:53:40  2023-07-03 11:54:30  2023-07-03 11:54:38  2023-07-03 11:59:05
